On branch master
	Add imp. for TimeInterval.

 Changes  committed:
	modified:   MiddlewareUtility/MiddlewareUtility.csproj
	modified:   MiddlewareUtility/intervals/dayIntervals/IDayInterval.cs
	new file:   MiddlewareUtility/intervals/dayIntervals/IDayIntervalFabric.cs
	modified:   MiddlewareUtility/intervals/timeInterval/ITimeInterval.cs
	new file:   MiddlewareUtility/intervals/timeInterval/implementation/TimeInterval.cs
	modified:   MiddlewareUtility_test/intervals/dayIntervals/implementation/DayIntervalTest.cs

--- a/MiddlewareUtility/MiddlewareUtility.csproj
+++ b/MiddlewareUtility/MiddlewareUtility.csproj
@@ -39,7 +39,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="intervals\dayIntervals\IDayInterval.cs" />
+    <Compile Include="intervals\dayIntervals\IDayIntervalFabric.cs" />
     <Compile Include="intervals\dayIntervals\implementation\DayInterval.cs" />
+    <Compile Include="intervals\timeInterval\implementation\TimeInterval.cs" />
+    <Compile Include="intervals\timeInterval\ITimeInterval.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
