--- a/MiddlewareUtility/MiddlewareUtility.csproj
+++ b/MiddlewareUtility/MiddlewareUtility.csproj
@@ -47,6 +47,8 @@
     <Compile Include="intervals\timeInterval\ITimeInterval.cs" />
     <Compile Include="intervals\timeInterval\ITimeIntervalFabric.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="realTimeData\pointTime\IPointTimesStampFabric.cs" />
+    <Compile Include="realTimeData\pointTime\IPointTimeStamp.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LoggerLib\LoggerLib.csproj">
