Add blank TagAbstraction classes.  Changes committed: 	modified:   MiddlewareUtility/MiddlewareUtility.csproj 	modified:   MiddlewareUtility/realTimeData/pointValue/IPointValue.cs 	new file:   MiddlewareUtility/realTimeData/tagAbstraction/tagElement/ITagElement.cs 	new file:   MiddlewareUtility/realTimeData/tagAbstraction/tagElement/implementation/TagElement.cs 	new file:   MiddlewareUtility/realTimeData/tagAbstraction/tagValue/ITagValue.cs 	new file:   MiddlewareUtility/realTimeData/tagAbstraction/tagValue/implementation/TagValue.cs

--- a/MiddlewareUtility/MiddlewareUtility.csproj
+++ b/MiddlewareUtility/MiddlewareUtility.csproj
@@ -55,6 +55,10 @@
     <Compile Include="realTimeData\pointTime\IPointTimeStamp.cs" />
     <Compile Include="realTimeData\pointValue\IPointValue.cs" />
     <Compile Include="realTimeData\pointValue\IPointValueFabric.cs" />
+    <Compile Include="realTimeData\tagAbstraction\tagElement\implementation\TagElement.cs" />
+    <Compile Include="realTimeData\tagAbstraction\tagElement\ITagElement.cs" />
+    <Compile Include="realTimeData\tagAbstraction\tagValue\implementation\TagValue.cs" />
+    <Compile Include="realTimeData\tagAbstraction\tagValue\ITagValue.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LoggerLib\LoggerLib.csproj">
