Function to determine the DayInterval in DayIntervalFabric class.  Changes committed: 	modified:   MiddlewareUtility/intervals/dayIntervals/IDayInterval.cs 	modified:   MiddlewareUtility/intervals/dayIntervals/IDayIntervalFabric.cs 	modified:   MiddlewareUtility/intervals/dayIntervals/implementation/DayInterval.cs 	modified:   MiddlewareUtility/intervals/dayIntervals/implementation/DayIntervalFabric.cs 	modified:   MiddlewareUtility_test/MiddlewareUtility_test.csproj 	new file:   MiddlewareUtility_test/intervals/dayIntervals/implementation/DayIntervalFabricBasicTest.cs 	new file:   MiddlewareUtility_test/intervals/dayIntervals/implementation/DayIntervalFabricTestIntervalsFunctions.cs

--- a/MiddlewareUtility_test/MiddlewareUtility_test.csproj
+++ b/MiddlewareUtility_test/MiddlewareUtility_test.csproj
@@ -42,6 +42,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="intervals\dayIntervals\implementation\DayIntervalFabricBasicTest.cs" />
+    <Compile Include="intervals\dayIntervals\implementation\DayIntervalFabricTestIntervalsFunctions.cs" />
     <Compile Include="intervals\dayIntervals\implementation\DayIntervalTest.cs" />
     <Compile Include="intervals\timeInterval\implementation\TimeIntervalTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
