fix directory name Intevals

--- a/MiddlewareUtility_test/MiddlewareUtility_test.csproj
+++ b/MiddlewareUtility_test/MiddlewareUtility_test.csproj
@@ -42,8 +42,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="intervals\DayInterval\DayIntervalTests.cs" />
-    <Compile Include="intervals\timeInterval\implementation\TimeIntervalTest.cs" />
+    <Compile Include="Intervals\DayInterval\DayIntervalTests.cs" />
+    <Compile Include="Intervals\timeInterval\implementation\TimeIntervalTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -55,9 +55,6 @@
       <Project>{be19f8bd-eb4e-4fce-a0f8-dd3e7a9fed38}</Project>
       <Name>MiddlewareUtility</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="intervals\dayIntervals" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
