Refactor DayInterval. Exclude DayInterval class. Now only TimeInterval only

--- a/MiddlewareUtility_test/MiddlewareUtility_test.csproj
+++ b/MiddlewareUtility_test/MiddlewareUtility_test.csproj
@@ -42,7 +42,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Intervals\DayInterval\DayIntervalTests.cs" />
+    <Compile Include="Intervals\DayInterval\DayIntervalFactory_tests.cs" />
     <Compile Include="Intervals\timeInterval\TimeIntervalTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
