Impelemnts constructor for timeInterval.

--- a/MiddlewareUtility/MiddlewareUtility.csproj
+++ b/MiddlewareUtility/MiddlewareUtility.csproj
@@ -62,6 +62,7 @@
     <Compile Include="intervals\DayInterval\IDayIntervalFactory.cs" />
     <Compile Include="intervals\TimeInterval\ITimeInterval.cs" />
     <Compile Include="intervals\TimeInterval\TimeInterval.cs" />
+    <Compile Include="intervals\TimeInterval\TimeIntervalMessages.cs" />
     <Compile Include="Logger\DefaultLogger.cs" />
     <Compile Include="Logger\IUtilityLogger.cs" />
     <Compile Include="Point\INumericPoint.cs" />
