--- a/MiddlewareUtility/MiddlewareUtility.csproj
+++ b/MiddlewareUtility/MiddlewareUtility.csproj
@@ -58,12 +58,12 @@
     <Compile Include="EnterpriseProperties\PhysicalProperty\PhysicalProperty.cs" />
     <Compile Include="EnterpriseProperties\StateProperty\StateProperty.cs" />
     <Compile Include="Extensions.cs" />
-    <Compile Include="intervals\DayInterval\DayIntervalFactory.cs" />
-    <Compile Include="intervals\DayInterval\DayIntervalFactoryMessages.cs" />
-    <Compile Include="intervals\DayInterval\IDayIntervalFactory.cs" />
-    <Compile Include="intervals\TimeInterval\ITimeInterval.cs" />
-    <Compile Include="intervals\TimeInterval\TimeInterval.cs" />
-    <Compile Include="intervals\TimeInterval\TimeIntervalMessages.cs" />
+    <Compile Include="Intervals\DayInterval\DayIntervalFactory.cs" />
+    <Compile Include="Intervals\DayInterval\DayIntervalFactoryMessages.cs" />
+    <Compile Include="Intervals\DayInterval\IDayIntervalFactory.cs" />
+    <Compile Include="Intervals\TimeInterval\ITimeInterval.cs" />
+    <Compile Include="Intervals\TimeInterval\TimeInterval.cs" />
+    <Compile Include="Intervals\TimeInterval\TimeIntervalMessages.cs" />
     <Compile Include="Logger\DefaultLogger.cs" />
     <Compile Include="Logger\IUtilityLogger.cs" />
     <Compile Include="Point\INumericPoint.cs" />
